tests/baselines/reference/tsxElementResolution.errors.txt
tsxElementResolution.tsx(12,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== tsxElementResolution.tsx (1 errors) ====
    declare namespace JSX {
    	interface IntrinsicElements {
    		foundFirst: { x: string };
    		'string_named';
    		'var';
    	}
    }
    
    class foundFirst { }
    class Other {}
    
    module Dotted {
           ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	export class Name { }
    }
    
    // Should find the intrinsic element, not the class element
    var a = <foundFirst  x="hello" />;
    var b = <string_named />;
    // TODO: This should not be a parse error (should
    //        parse a property name here, not identifier)
    // var c = <var />;
    var d = <Other />;
    var e = <Dotted.Name />;
    